# nesse-bank

./: .gitignore  Cargo.toml  README.md
src/: account.rs  bank.rs  io.rs  lib.rs  main.rs  tests.rs  util.rs
src/snapshots/: nesse_bank__tests__handle_10mil_transactions.snap  nesse_bank__tests__historic_runs@chargeback-allow-overdraft.csv.snap  nesse_bank__tests__historic_runs@chargeback.csv.snap  nesse_bank__tests__historic_runs@deposit-duplicate-tx.csv.snap  nesse_bank__tests__historic_runs@deposit-reject-if-frozen.csv.snap  nesse_bank__tests__historic_runs@deposit.csv.snap  nesse_bank__tests__historic_runs@dispute.csv.snap  nesse_bank__tests__historic_runs@resolve.csv.snap  nesse_bank__tests__historic_runs@withdrawal-reject-if-frozen.csv.snap  nesse_bank__tests__historic_runs@withdrawal-reject-overdraft.csv.snap  nesse_bank__tests__historic_runs@withdrawal.csv.snap
src/test-data/historic-runs/: chargeback.csv  deposit-duplicate-tx.csv  deposit-reject-if-frozen.csv  deposit.csv  dispute.csv  resolve.csv  withdrawal-reject-if-frozen.csv  withdrawal-reject-overdraft.csv  withdrawal.csv
src/tx/: incoming.rs  mod.rs  stored.rs
src/tx/snapshots/: nesse_bank__tx__stored__tests__tx_details_to_raw_and_back.snap
