[package]
name = "nesse-bank"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3", features = ["derive"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
csv = "1"
kv = { version = "0.23", features = ["json-value"] }
tempdir = "0.3"

serde = { version = "1", features = ["derive"] }
anyhow = "1"
thiserror = "1"
derive_more = "0.99"

[dev-dependencies]
insta = { version = "1.12", features = ["glob"] }
itertools = "0.10"
