[package]
name = "nesse-bank"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3", features = ["derive"] }
rust_decimal = "1"
csv = "1"
kv = "0.23"
tempdir = "0.3"

serde = { version = "1", features = ["derive"] }
anyhow = "1"
thiserror = "1"
derive_more = "0.99"

[dev-dependencies]
insta = { version = "1.12", features = ["glob"] }
itertools = "0.10"
